lustre/include/cl_object.h
@@ -2364,6 +2364,12 @@ struct cl_client_cache {
 	 */
 	wait_queue_head_t	ccc_unstable_waitq;
 };
+/**
+ * cl_cache functions
+ */
+struct cl_client_cache *cl_cache_init(unsigned long lru_page_max);
+void cl_cache_incref(struct cl_client_cache *cache);
+void cl_cache_decref(struct cl_client_cache *cache);
 
 /** @} cl_page */
 
