lustre/include/lclient.h
@@ -437,12 +437,37 @@ void ccc_inode_lsm_put(struct inode *inode, struct lov_stripe_md *lsm);
  * pages is maintained, along with other statistics.
  */
 struct cl_client_cache {
-	cfs_atomic_t	ccc_users;    /* # of users (OSCs) of this data */
-	cfs_list_t	ccc_lru;      /* LRU list of cached clean pages */
-	spinlock_t	ccc_lru_lock; /* lock for list */
-	cfs_atomic_t	ccc_lru_left; /* # of LRU entries available */
-	unsigned long	ccc_lru_max;  /* Max # of LRU entries possible */
-	unsigned int	ccc_lru_shrinkers; /* # of threads reclaiming */
+	/**
+	 * # of client cache refcount
+	 * # of users (OSCs) + 2 (held by llite and lov)
+	 */
+	cfs_atomic_t    ccc_users;
+	/**
+	 * List of entities(OSCs) for this LRU cache
+	 */
+	cfs_list_t	ccc_lru;
+	/**
+	 * Lock to protect ccc_lru list
+	 */
+	spinlock_t	ccc_lru_lock;
+	/**
+	 * # of LRU entries available
+	 */
+	cfs_atomic_t	ccc_lru_left;
+	/**
+	 * Max # of LRU entries possible
+	 */
+	unsigned long	ccc_lru_max;
+	/**
+	 * # of threads reclaiming
+	 */
+	unsigned int	ccc_lru_shrinkers;
 };
 
+/**
+ * cl_cache functions
+ */
+struct cl_client_cache *cl_cache_init(unsigned long lru_page_max);
+void cl_cache_incref(struct cl_client_cache *cache);
+void cl_cache_decref(struct cl_client_cache *cache);
 #endif /*LCLIENT_H */
