lustre/llite/llite_lib.c
@@ -91,16 +91,11 @@ static struct ll_sb_info *ll_init_sbi(void)
 	lru_page_max = pages / 2;
 
 	/* initialize ll_cache data */
-	atomic_set(&sbi->ll_cache.ccc_users, 0);
-	sbi->ll_cache.ccc_lru_max = lru_page_max;
-	atomic_long_set(&sbi->ll_cache.ccc_lru_left, lru_page_max);
-	spin_lock_init(&sbi->ll_cache.ccc_lru_lock);
-	INIT_LIST_HEAD(&sbi->ll_cache.ccc_lru);
-
-	/* turn unstable check off by default as it impacts performance */
-	sbi->ll_cache.ccc_unstable_check = 0;
-	atomic_long_set(&sbi->ll_cache.ccc_unstable_nr, 0);
-	init_waitqueue_head(&sbi->ll_cache.ccc_unstable_waitq);
+	sbi->ll_cache = cl_cache_init(lru_page_max);
+	if (sbi->ll_cache == NULL) {
+		OBD_FREE(sbi, sizeof(*sbi));
+		RETURN(NULL);
+	}
 
 	sbi->ll_ra_info.ra_max_pages_per_file = min(pages / 32,
 					   SBI_DEFAULT_READAHEAD_MAX);
@@ -162,6 +157,10 @@ static void ll_free_sbi(struct super_block *sb)
 		spin_unlock(&ll_sb_lock);
 		if (!list_empty(&sbi->ll_squash.rsi_nosquash_nids))
 			cfs_free_nidlist(&sbi->ll_squash.rsi_nosquash_nids);
+		if (sbi->ll_cache != NULL) {
+			cl_cache_decref(sbi->ll_cache);
+			sbi->ll_cache = NULL;
+		}
 		OBD_FREE(sbi, sizeof(*sbi));
 	}
 	EXIT;
@@ -577,8 +576,8 @@ static int client_common_fill_super(struct super_block *sb, char *md, char *dt,
         cl_sb_init(sb);
 
 	err = obd_set_info_async(NULL, sbi->ll_dt_exp, sizeof(KEY_CACHE_SET),
-				 KEY_CACHE_SET, sizeof(sbi->ll_cache),
-				 &sbi->ll_cache, NULL);
+				 KEY_CACHE_SET, sizeof(*sbi->ll_cache),
+				 sbi->ll_cache, NULL);
 
 	sb->s_root = d_make_root(root);
 	if (sb->s_root == NULL) {
@@ -624,8 +623,6 @@ out_lock_cn_cb:
 out_dt:
         obd_disconnect(sbi->ll_dt_exp);
         sbi->ll_dt_exp = NULL;
-	/* Make sure all OScs are gone, since cl_cache is accessing sbi. */
-	obd_zombie_barrier();
 out_md_fid:
 	obd_fid_fini(sbi->ll_md_exp->exp_obd);
 out_md:
@@ -795,9 +792,6 @@ static void client_common_put_super(struct super_block *sb)
 	obd_fid_fini(sbi->ll_dt_exp->exp_obd);
         obd_disconnect(sbi->ll_dt_exp);
         sbi->ll_dt_exp = NULL;
-	/* wait till all OSCs are gone, since cl_cache is accessing sbi.
-	 * see LU-2543. */
-	obd_zombie_barrier();
 
         lprocfs_unregister_mountpoint(sbi);
 
@@ -1159,12 +1153,12 @@ void ll_put_super(struct super_block *sb)
 	/* Wait for unstable pages to be committed to stable storage */
 	if (force == 0) {
 		struct l_wait_info lwi = LWI_INTR(LWI_ON_SIGNAL_NOOP, NULL);
-		rc = l_wait_event(sbi->ll_cache.ccc_unstable_waitq,
-			atomic_long_read(&sbi->ll_cache.ccc_unstable_nr) == 0,
+		rc = l_wait_event(sbi->ll_cache->ccc_unstable_waitq,
+			atomic_long_read(&sbi->ll_cache->ccc_unstable_nr) == 0,
 			&lwi);
 	}
 
-	ccc_count = atomic_long_read(&sbi->ll_cache.ccc_unstable_nr);
+	ccc_count = atomic_long_read(&sbi->ll_cache->ccc_unstable_nr);
 	if (force == 0 && rc != -EINTR)
 		LASSERTF(ccc_count == 0, "count: %li\n", ccc_count);
 
